Fixed bug #30828 (debug_backtrace() reports incorrect class in overridden methods)